# OpenCrawlEngine

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE.md  README.md
app/: CMakeLists.txt
app/src/: main.cpp
app/ui/: CMakeLists.txt
app/ui/include/oce_ui/: asset_paths.hpp  game_panels.hpp  icon_cache.hpp  ui_app.hpp  ui_fonts.hpp
app/ui/src/: asset_paths.cpp  game_panels.cpp  icon_cache.cpp  ui_app.cpp
cmake/: dependencies.cmake
engine/: CMakeLists.txt
engine/include/oce/: engine.hpp  model.hpp  serialize.hpp  snapshot.hpp  version.hpp
engine/include/oce/gm/: tools.hpp
engine/include/oce/rules/: character.hpp  combat.hpp  dice.hpp  items.hpp  leveling.hpp  mounts.hpp  skills.hpp  world.hpp  worldgen.hpp
engine/src/: engine.cpp  serialize.cpp  version.cpp
engine/src/gm/: tools.cpp
engine/src/rules/: character.cpp  combat.cpp  items.cpp  leveling.cpp  mounts.cpp  skills.cpp  world.cpp
engine/tests/: test_campaign.cpp  test_combat.cpp  test_combat_depth.cpp  test_engine.cpp  test_gm.cpp  test_items.cpp  test_progression.cpp  test_serialize.cpp  test_skill_loop.cpp  test_smoke.cpp  test_world.cpp  test_worldgen.cpp
libs/: .gitkeep
libs/oce_agent/: CMakeLists.txt
libs/oce_agent/include/: oce_agent.h
libs/oce_agent/src/: oce_agent.c
libs/oce_agent/tests/: test_agent.c
libs/oce_http/: CMakeLists.txt
libs/oce_http/include/: oce_http.h
libs/oce_http/src/: oce_http.c
libs/oce_http/tests/: test_http.c
libs/oce_json/: CMakeLists.txt
libs/oce_json/include/: oce_json.h
libs/oce_json/src/: oce_json.c
libs/oce_json/tests/: test_json.c
libs/oce_llm/: CMakeLists.txt
libs/oce_llm/include/: oce_llm.h
libs/oce_llm/src/: oce_llm.c
libs/oce_llm/tests/: test_llm.c
libs/oce_secrets/: CMakeLists.txt
libs/oce_secrets/include/: oce_secrets.h
libs/oce_secrets/src/: oce_secrets.c
libs/oce_secrets/tests/: test_secrets.c
libs/oce_store/: CMakeLists.txt
libs/oce_store/include/: oce_store.h
libs/oce_store/src/: oce_store.c
libs/oce_store/tests/: test_store.c
packaging/: opencrawlengine.desktop
scripts/: backup.sh  copy_icons.sh  make-appimage.sh  make-deb.sh
